<!--
  Copyright 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">Summer Project</string>
    <string-array name="planets_array">
        <item>XVideos</item>
        <item>XNXX</item>
        <item>RedTube</item>
        <item>PornHub</item>
        <item>Porn.com</item>
        <item>X Hamster</item>
        <item>YouPorn</item>
        <item>Neptune</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="pref_login_credential_title">Login Credential</string>
    <string name="pref_login_title">Enter your login credential</string>
    <string name="pref_login_summ">This checks if you are free or paid</string>
    <string name="pref_delete_account_title">Delete Account</string>
    <string name="pref_delete_account_summary">Permanently deletes your account</string>

</resources>
